--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,10 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.10"
 prompt = "^0.4.1"
+
 [tool.poetry.scripts]
 brain-games = "brain_games.scripts.brain_games:main"
+brain-even = "brain_games.scripts.brain_even:main"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^7.0.0"
