--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.10"
 prompt = "^0.4.1"
+asciinema = "^2.4.0"
 
 [tool.poetry.scripts]
 brain-games = "brain_games.scripts.brain_games1:main"
